[package]
name = "hulahoop"
version = "0.1.0"
authors = ["ajesipow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = { version = "0.2", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hashring"
harness = false
