[package]
name = "hulahoop"
version = "0.1.0"
authors = ["ajesipow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = { version = "1.1", optional = true }

[features]
fxhash = ["dep:rustc-hash"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hashring"
harness = false
