[package]
name = "hulahoop"
license = "MIT OR Apache-2.0"
description = "An efficient consistent hash ring implementation supporting virtual nodes."
repository = "https://github.com/ajesipow/hulahoop"
readme = "README.md"
keywords = ["consistent", "hash", "ring", "virtual nodes", "distributed"]
categories = ["algorithms", "data-structures"]
include = ["/src"]
version = "0.1.0"
authors = ["ajesipow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = { version = "1.1", optional = true }

[features]
fxhash = ["dep:rustc-hash"]

[dev-dependencies]
criterion = "0.3"
rustc-hash = "1.1"

[[bench]]
name = "hashring"
harness = false
